# TestTask

./: .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client.cpp
protos/: testTask.grpc.pb.cc  testTask.grpc.pb.h  testTask.pb.cc  testTask.pb.h  testTask.proto
server/: CMakeLists.txt
server/src/: server.cpp
